syntax = "proto3";

package auth.v1;

option go_package = "github.com/example/anime-platform/gen/auth/v1;authv1";

message User {
  string id = 1;
  string email = 2;
  string username = 3;
  string created_at_rfc3339 = 4;
}

message RegisterRequest {
  string email = 1;
  string username = 2;
  string password = 3;
}

message LoginRequest {
  string login = 1;
  string password = 2;
}

message RefreshRequest {
  string refresh_token = 1;
}

message LogoutRequest {
  string refresh_token = 1;
}

message RegisterResponse {
  User user = 1;
  string access_token = 2;
  string refresh_token = 3;
  int64 expires_in = 4;
}

message LoginResponse {
  User user = 1;
  string access_token = 2;
  string refresh_token = 3;
  int64 expires_in = 4;
}

message RefreshResponse {
  User user = 1;
  string access_token = 2;
  string refresh_token = 3;
  int64 expires_in = 4;
}

message LogoutResponse {}

message MeRequest {}
message MeResponse {
  string user_id = 1;
  string email = 2;
  string username = 3;
}

service AuthService {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Refresh(RefreshRequest) returns (RefreshResponse);
  rpc Logout(LogoutRequest) returns (LogoutResponse);
  rpc Me(MeRequest) returns (MeResponse);
}
